Fix for image directory

--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -35,24 +35,24 @@
 <div class="row">
     <div class="col-md-3">
         <div class="thumbnail"> 
-            <img src="hands-caged.jpg">
+            <img src="~/Content/Images/hands-caged.jpg">
         </div>
     </div>
 
     <div class="col-md-3">
         <div class="thumbnail">
-            <img src="hands-tied.jpg">
+            <img src="~/Content/Images/hands-tied.jpg">
         </div>
     </div>
     <div class="col-md-3">
         <div class="thumbnail">
-            <img src="money.jpg" alt="...">
+            <img src="~/Content/Images/money.jpg" >
         </div>
     </div>
     <div class="col-md-3">
         <div class="thumbnail">
    
-            <img src="hands-open.jpg">
+            <img src="~/Content/Images/hands-open.jpg">
         </div>
     </div>
 
