Fix for image quality

--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -46,7 +46,7 @@
     </div>
     <div class="col-md-3">
         <div class="thumbnail">
-            <img src="~/Content/Images/money.jpg" >
+            <img src="~/Content/Images/feet.jpg" >
         </div>
     </div>
     <div class="col-md-3">
