--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -3,106 +3,69 @@
     ViewBag.Title = "Index";
 }
 
-<style>
-    body {
-  padding-top: 50px;
-}
- 
-.thumbnail {
-    position:relative;
-    overflow:hidden;
-}
- 
-.caption {
-    position:absolute;
-    top:0;
-    right:0;
-    background:rgba(66, 139, 202, 0.75);
-    width:100%;
-    height:100%;
-    padding:2%;
-    display: none;
-    text-align:center;
-    color:#fff !important;
-    z-index:2;
-}
-</style>
+<!-- add photo with effect -->
 
-<!-- Addditons -->
+    <div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
+        <div class="row">
+            <div class="col-md-12">
+                
+                    <figure class="effect-caged">
+                        <img src="~/Content/Images/hands-caged.jpg" style="width:100%;max-height:330px;" />
+                        <figcaption>
+                            <h1>What is <span>Human Trafficking?</span></h1>
+                            <p>sorem ipsum tu de furson</p>            
+                        </figcaption>
+                    </figure>
+     
+            </div>
 
-<div class="container">
+    </div>
+ </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <div class="thumbnail"> 
-            <img src="~/Content/Images/hands-caged.jpg">
+    <!--orginal-->
+    <div class="row">
+        <div class="col-md-8">
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
+                Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
+
+            </p>
+
+            <h2> Why Does It Happen?</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
+                Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
+
+            </p>
+
+            <h2> Where Can It Occur?</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
+            </p>
         </div>
-    </div>
 
-    <div class="col-md-3">
-        <div class="thumbnail">
-            <img src="~/Content/Images/hands-tied.jpg">
+        <div class="col-md-offset-8">
+            <h2 class="text-center"> How You Can Help!</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
+            </p>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="thumbnail">
-            <img src="~/Content/Images/feet.jpg" >
+        <div class="col-md-offset-8 panel panel-warning">
+            <h3 class="text-center panel-heading">Most Recent Resources</h3>
+            <div class="h4 panel-body">
+                <p></p>
+
+            </div>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="thumbnail">
-   
-            <img src="~/Content/Images/hands-open.jpg">
-        </div>
+
     </div>
 
-</div>
-    </div>
 
-<!--orginal-->
-<div class="row">
-    <div class="col-md-8">
-        <h2> What Is Trafficking?</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
-        </p>
-
-        <h2> Why Does It Happen?</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
-        </p>
-
-        <h2> Where Can It Occur?</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-        </p>
-    </div>
-
-    <div class="col-md-offset-8">
-        <h2 class="text-center"> How You Can Help!</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-        </p>
-    </div>
-    <div class="col-md-offset-8 panel panel-warning">
-        <h3 class="text-center panel-heading">Most Recent Resources</h3>
-        <div class="h4 panel-body">
-            <p></p>
-
-        </div>
-    </div>
-
-</div>
-
-<!-- New additions script *Caleb*-->
 
 
 
