--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="col-md-12">
                 
                     <figure class="effect-caged">
-                        <img src="~/Content/Images/hands-caged.jpg" style="width:100%;max-height:330px;" />
+                        <img src="~/Content/Images/test1.jpg" style="width:100%;max-height:330px;" />
                         <figcaption>
                             <h1>What is <span>Human Trafficking?</span></h1>
                             <p>sorem ipsum tu de furson</p>            
