--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -2,6 +2,17 @@
     ViewBag.Title = "Contact";
 }
 
+<!-- Jumbotron -->
+
+<div class="container">
+    <div class="jumbotron">
+        <h1>Reach Out</h1>
+        <p> Get down with some help</p>
+        <p><a class="btn btn-info btn-lg">Contact now</a></p>
+    </div>
+
+</div>
+
 <!-- Created container div to create columns for content-->
 <!-- Moved header within left-most column -->
 <div class="container">
