--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -13,21 +13,36 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="~/Content/Images/test1.jpg" />
+            <img src="~/Content/Images/test1.jpg" id="carousel_img" />
             <div class="carousel-caption">
-                <h3>Caption Text</h3>
+                <h3 id="carousel_cap">Caption Text</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
+                    bibendum.
+                </p>
+                <p id="carousel_btn"><a class="btn btn-danger btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
-            <img src="~/Content/Images/test2.jpg" />
+            <img src="~/Content/Images/test2.jpg" id="carousel_img" />
             <div class="carousel-caption">
-                <h3>Caption Text</h3>
+                <h3 id="carousel_cap">Caption Text</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum
+                    bibendum.
+                </p>
+                <p id="carousel_btn"><a class="btn btn-primary btn-group-lg">Read More</a></p>
             </div>
         </div>
         <div class="item">
-            <img src="~/Content/Images/test3.jpg" />
+            <img src="~/Content/Images/test3.jpg" id="carousel_img" />
             <div class="carousel-caption">
-                <h3>Caption Text</h3>
+                <h3 id="carousel_cap">Caption Text</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum 
+                bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum 
+                et malesuada fames ac ante ipsum primis in faucibus. 
+                </p>
+                <p id="carousel_btn"><a class="btn btn-success btn-group-lg">Read More</a></p>
             </div>
         </div>
     </div>
