Cyber Security Resource Page

--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -3,5 +3,37 @@
     ViewBag.Title = "Resources";
 }
 
-<h2>Resources</h2>
+<div class="row">
+    <div class="col-md-8">
 
+        <p class="h2" style="text-align:center; color:slategray"><strong>How These Resources Can Help You</strong></p><br /><br />
+
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
+
+        </p>
+
+    </div>
+
+</div>
+</br>
+
+<div class="col-md-8">
+    <p class="h2" style="text-align:center; color:slategray"><strong>Top Cyber Security Resources</strong></p><br />
+    <div class="col-md-8">
+        <ul>
+            <li><a href="https://heimdalsecurity.com/blog/cyber-security-tips/">131 Cyber Security Tips that Anyone Can Apply</a></li>
+            <li>Website2</li>
+            <li>Website3</li>
+            <li>Website4</li>
+            <li>Website5</li>
+            <li>Website6</li>
+            <li>Website7</li>
+            <li>Website8</li>
+            <li>Website9</li>
+            <li>Website10</li>
+        </ul>
+
+    </div>
+</div>
