--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -346,6 +346,7 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
    border-radius: 22px 22px 22px 22px;
    width:100%;
    overflow: hidden;
+   min-height:375px;
    
     
 }
@@ -353,6 +354,8 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 #carousel_img{
 
  border-radius: 22px 22px 22px 22px;
+  min-height:375px;
+   overflow: hidden;
 
 }
 
@@ -369,3 +372,4 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
     margin-bottom:3%;
 
 }
+
