--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -356,6 +356,7 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
  border-radius: 22px 22px 22px 22px;
    overflow: hidden;
    min-height:375px;
+    width:100%;
 
 }
 
@@ -372,6 +373,24 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
     margin-bottom:10%;
 
 }
+
+		/* Start CSS for Teen Page*/
+
+.center {
+  margin: 0 auto;
+}
+
+.carousel-caption {
+  font-size: 28px;
+  bottom: 0;
+}
+
+/* post class*/
+
+.teen_res {
+  margin-bottom: 30px;
+}
+
 
 
 
