Final teen page (trafficking)

--- a/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teen.cshtml
@@ -81,21 +81,21 @@
         <div class="row">
 
             <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" alt="" /></a>
+                <a href="#" class="thumbnail" ><img src="~/Content/Images/test2.jpg" /></a>
                 <h2>Resource 1</h2>
                 <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
                 <span class="btn btn-primary btn-lg">Check it out!</span>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" alt="" /></a>
+                <a href="#" class="thumbnail" ><img src="~/Content/Images/test2.jpg"  /></a>
                 <h2>Resource 2</h2>
                 <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec. </p>
                 <span class="btn btn-danger btn-lg">Check it out!</span>
             </div>
 
             <div class="col-md-4 col-sm-8 teen_res">
-                <a href="#" class="thumbnail"><img src="~/Content/Images/test2.jpg" alt="" /></a>
+                <a href="#" class="thumbnail" ><img src="~/Content/Images/test2.jpg"  /></a>
                 <h2>Resource 3</h2>
                 <p> Aliquam erat volutpat. Nunc massa felis, ullamcorper et vehicula ac, malesuada sit amet magna. Proin ac dolor nec.</p>
                 <span class="btn btn-success btn-lg">Check it out!</span>
