--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -3,103 +3,110 @@
     ViewBag.Title = "Cyber Security Page";
 }
 
-
-<!-- Eliminated the carousel -->
-
-<div class="row">
-    <div class="col-md-8">
-
-        <p class="h2" style="text-align:center; color:slategray"><strong>Why Cyber Security Plays an Important <br /> Role in Human Trafficking</strong></p><br /><br />
-
-  
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
-
-            Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
-
-            <br />
-            Maecenas consequat sed leo vel bibendum. Vestibulum id leo vitae nulla viverra fermentum. Curabitur vel accumsan purus. Integer vel varius enim. Phasellus a mollis enim, eget gravida lorem. Etiam ac vulputate massa, in aliquet nisi. Proin ut tempor turpis. Sed pulvinar lectus vel ex finibus ullamcorper. Integer efficitur nec ligula eget suscipit. Curabitur massa est, laoreet at tincidunt a, consequat ac dolor. Integer pretium nisi nec sodales sollicitudin. Integer tempor ante quis est vehicula, eget luctus arcu malesuada.
-
-            Sed vehicula magna id elit scelerisque lobortis. Nulla sagittis neque eu nunc scelerisque, in tempor ipsum dictum. Cras ut tristique dui. Proin placerat vulputate risus, id imperdiet nisl vehicula vel. Aenean augue odio, consectetur ac augue eget, rutrum laoreet sem. Nulla facilisi. Aenean iaculis urna sit amet erat lobortis elementum. In ut quam aliquam, ullamcorper tortor ac, fringilla arcu. Aliquam suscipit, ipsum a efficitur ultricies, urna est varius massa, nec vulputate lacus odio eget nibh. Sed et neque metus. Nullam lacinia fringilla nulla, non condimentum ex imperdiet sit amet. Praesent vitae efficitur orci.
-
-            Phasellus vehicula, arcu nec sagittis mollis, diam lacus laoreet leo, quis convallis justo dui sed mauris. Curabitur ut ex mattis ex ultricies dignissim. Nam non interdum lorem. Etiam tempus sagittis elit, vitae ultricies orci posuere id. Donec vel neque erat. Donec ac enim accumsan, consequat arcu et, lobortis leo. Maecenas sit amet tincidunt dolor, ac tristique elit. Vestibulum rhoncus ligula id ex rhoncus auctor. Nunc faucibus orci vel lorem tempor, ultricies auctor orci congue. Sed efficitur eget est nec volutpat. Fusce sit amet dapibus orci. Nullam varius purus nisl.
-        </p>
-
+<div class="container">
+    <div class="jumbotron" id="cyber_sec_jumbo">
+        <h1> Cyber Security</h1>
     </div>
-    <div class="col-md-4 align-center ">
-        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Top 10 Ways to Protect Yourself Online</strong></p>
-        <ul class="align-left">
-            <li>Never tell anyone your name</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-        </ul>
-        <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md">Check out the Article!</a>
-
-        <!-- Add another article link-->
-        <p class="h3" style="text-align:center;color:slategray;padding-top:12%;"><strong>Top Techniques to stay safe online</strong></p>
-        <ul class="align-left">
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-        </ul>
-        <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
-        <br /><br />
-
-    </div>
-
 </div>
-<!-- added in row for the glyphicon table-->
-<div class="row container-fluid" style="padding-top:5.25%;">
+ 
 
+    <div class="row">
+        <div class="col-md-8">  
 
-    <div id="Quick Tips" class="container-fluid text-center">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra sapien eget tempor pulvinar. Nunc eleifend orci nec rutrum bibendum. Sed non enim ac elit malesuada venenatis. Suspendisse imperdiet dolor sit amet leo fermentum, sed pulvinar tellus cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec velit metus, facilisis a sodales non, scelerisque et est. Maecenas a sapien placerat, dignissim dui vestibulum, ultricies est. Praesent non mauris non dolor ultricies tincidunt. Nulla tellus purus, venenatis eu magna in, ultrices pellentesque ligula. Donec elementum pulvinar ex, non mollis justo lacinia et. Sed commodo porta felis, quis viverra ligula auctor vel. Etiam elit lacus, vehicula vel finibus quis, semper vel lectus.
 
-        <div class="row slideanim">
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-saved logo-table"></span>
-                <h4>Be Safe</h4>
-                <p>Lorem ipsum dolor sit amet..</p>
-            </div>
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-book logo-table"></span>
-                <h4 >Be Smart</h4>
-                <p>Lorem ipsum dolor sit amet..</p>
-            </div>
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-eye-open logo-table"></span>
-                <h4 >Be Vigilant</h4>
-                <p>Lorem ipsum dolor sit amet..</p>
-            </div>
+                Nam luctus tellus massa, ut fringilla quam ultrices a. Nam turpis ex, convallis mollis erat non, consectetur vehicula neque. Morbi enim metus, condimentum et tincidunt vitae, vestibulum eu neque. Sed velit felis, suscipit quis nibh suscipit, feugiat consequat quam. Suspendisse finibus tempus maximus. Quisque erat ex, tincidunt vitae euismod nec, sagittis eu urna. Etiam eu nibh sit amet dolor rutrum ullamcorper et eget diam. Duis pulvinar convallis semper. Nam volutpat tincidunt cursus. Etiam vitae felis orci. Fusce nec leo a diam suscipit semper ac semper nibh. Suspendisse potenti. Maecenas ac sem a lorem aliquet efficitur.
+
+                <br />
+                Maecenas consequat sed leo vel bibendum. Vestibulum id leo vitae nulla viverra fermentum. Curabitur vel accumsan purus. Integer vel varius enim. Phasellus a mollis enim, eget gravida lorem. Etiam ac vulputate massa, in aliquet nisi. Proin ut tempor turpis. Sed pulvinar lectus vel ex finibus ullamcorper. Integer efficitur nec ligula eget suscipit. Curabitur massa est, laoreet at tincidunt a, consequat ac dolor. Integer pretium nisi nec sodales sollicitudin. Integer tempor ante quis est vehicula, eget luctus arcu malesuada.
+
+                Sed vehicula magna id elit scelerisque lobortis. Nulla sagittis neque eu nunc scelerisque, in tempor ipsum dictum. Cras ut tristique dui. Proin placerat vulputate risus, id imperdiet nisl vehicula vel. Aenean augue odio, consectetur ac augue eget, rutrum laoreet sem. Nulla facilisi. Aenean iaculis urna sit amet erat lobortis elementum. In ut quam aliquam, ullamcorper tortor ac, fringilla arcu. Aliquam suscipit, ipsum a efficitur ultricies, urna est varius massa, nec vulputate lacus odio eget nibh. Sed et neque metus. Nullam lacinia fringilla nulla, non condimentum ex imperdiet sit amet. Praesent vitae efficitur orci.
+
+                Phasellus vehicula, arcu nec sagittis mollis, diam lacus laoreet leo, quis convallis justo dui sed mauris. Curabitur ut ex mattis ex ultricies dignissim. Nam non interdum lorem. Etiam tempus sagittis elit, vitae ultricies orci posuere id. Donec vel neque erat. Donec ac enim accumsan, consequat arcu et, lobortis leo. Maecenas sit amet tincidunt dolor, ac tristique elit. Vestibulum rhoncus ligula id ex rhoncus auctor. Nunc faucibus orci vel lorem tempor, ultricies auctor orci congue. Sed efficitur eget est nec volutpat. Fusce sit amet dapibus orci. Nullam varius purus nisl.
+                Sed vehicula magna id elit scelerisque lobortis. Nulla sagittis neque eu nunc scelerisque, in tempor ipsum dictum. Cras ut tristique dui. Proin placerat vulputate risus, id imperdiet nisl vehicula vel. Aenean augue odio, consectetur ac augue eget, rutrum laoreet sem. Nulla facilisi. Aenean iaculis urna sit amet erat lobortis elementum. In ut quam aliquam, ullamcorper tortor ac, fringilla arcu. Aliquam suscipit, ipsum a efficitur ultricies, urna est varius massa, nec vulputate lacus odio eget nibh. Sed et neque metus. Nullam lacinia fringilla nulla, non condimentum ex imperdiet sit amet. Praesent vitae efficitur orci.
+
+                Phasellus vehicula, arcu nec sagittis mollis, diam lacus laoreet leo, quis convallis justo dui sed mauris. Curabitur ut ex mattis ex ultricies dignissim. Nam non interdum lor
+            </p>
+
         </div>
-        <br><br>
-        <div class="row slideanim">
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-heart logo-table"></span>
-                <h4 >Reach Out</h4>
-                <p>Lorem ipsum dolor sit amet..</p>
+
+        <div class="col-md-4 align-center" id="borders">
+            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top 10 Ways to Protect Yourself Online</strong></p>
+            <ul class="align-left">
+                <li>Never tell anyone your name</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+            </ul>
+            <a href="#" style="margin-left:95px;" class="btn btn-warning bt-md ">Check out the Article!</a></ br></ br>
             </div>
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-headphones logo-table"></span>
-                <h4 >Be Heard</h4>
-                <p>Lorem ipsum dolor sit amet..</p>
-            </div>
-            <div class="col-sm-4">
-                <span class="glyphicon glyphicon-arrow-up logo-table"></span>
-                <h4>Be Aware</h4>
-                <p>Lorem ipsum dolor sit amet..</p>
-            </div>
+        
+            <div class="col-md-4 align-center" id="borders">
+
+            <!-- Add another article link-->
+            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top Techniques to stay safe online</strong></p>
+            <ul class="align-left">
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+                <li>blah</li>
+            </ul>
+            <a href="#" style="margin-left:95px;" class="btn btn-danger bt-md">Check out the Article!</a>
+            <br /><br />
         </div>
     </div>
 
+    <!-- added in row for the glyphicon table-->
+    <div class="row container-fluid" style="padding-top:7%;padding-left:-5%">
 
 
-</div>
+        <div id="Quick Tips" class="container-fluid text-center">
+
+            <div class="row slideanim">
+                <div class="col-sm-4">
+                    <span class="glyphicon glyphicon-saved logo-table"></span>
+                    <h4>Be Safe</h4>
+                    <p>Lorem ipsum dolor sit amet..</p>
+                </div>
+                <div class="col-sm-4">
+                    <span class="glyphicon glyphicon-book logo-table"></span>
+                    <h4>Be Smart</h4>
+                    <p>Lorem ipsum dolor sit amet..</p>
+                </div>
+                <div class="col-sm-4">
+                    <span class="glyphicon glyphicon-eye-open logo-table"></span>
+                    <h4>Be Vigilant</h4>
+                    <p>Lorem ipsum dolor sit amet..</p>
+                </div>
+            </div>
+            <br><br>
+            <div class="row slideanim">
+                <div class="col-sm-4">
+                    <span class="glyphicon glyphicon-heart logo-table"></span>
+                    <h4>Reach Out</h4>
+                    <p>Lorem ipsum dolor sit amet..</p>
+                </div>
+                <div class="col-sm-4">
+                    <span class="glyphicon glyphicon-headphones logo-table"></span>
+                    <h4>Be Heard</h4>
+                    <p>Lorem ipsum dolor sit amet..</p>
+                </div>
+                <div class="col-sm-4">
+                    <span class="glyphicon glyphicon-arrow-up logo-table"></span>
+                    <h4>Be Aware</h4>
+                    <p>Lorem ipsum dolor sit amet..</p>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
