--- a/Praesidium/Praesidium/Views/Home/About.cshtml
+++ b/Praesidium/Praesidium/Views/Home/About.cshtml
@@ -3,14 +3,16 @@
 }
 
 
-    <h1 style="text-align: center;">About the Ferris Watchdog Program</h1>
+    <h1 style="padding-left:12%;">About the Ferris Watchdog Program</h1>
     <br />
 
     <div class="container">
         <div class="col-md-9 panel panel-default" >
             
             <div style="text-align: center;">
+
             <!-- Made the ferris image responsive to scaling *Caleb*-->
+
             <img src="~/Content/Images/img04.jpg" style="border: 2px solid black; width:100%;" class="img-responsive"/>
             </div>
             <br />
@@ -40,6 +42,4 @@
                 </div>
             </div>
         </div>
-        <div class="intro">
-            <p class="text-center" style="color:lightslategrey"><strong><em>This page was created by Ferris State Students <br /> under the supervision of Professors</em></strong> </p>
-        </div>
+     
