--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -12,8 +12,7 @@
                     <figure class="effect-caged">
                         <img src="~/Content/Images/test4.jpg" style="width:100%;max-height:330px;" />
                         <figcaption>
-                            <h1>What is <span>Human Trafficking?</span></h1>
-                            <p>sorem ipsum tu de furson</p>            
+                            <h1>What is <span>Human Trafficking?</span></h1>         
                         </figcaption>
                     </figure>
      
@@ -55,11 +54,15 @@
 
             </p>
         </div>
-        <div class="col-md-offset-8 panel panel-warning">
-            <h3 class="text-center panel-heading">Most Recent Resources</h3>
+        <div class="col-md-offset-8 panel panel-warning" id="borders">
+            <h3 style="text-align:center; color:antiquewhite">Most Recent Resources</h3>
             <div class="h4 panel-body">
-                <p></p>
-
+                <p> Lorem em ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra</p>
+                <a href="#" class="btn btn-success bt-sm" style="margin-left:39%;margin-bottom:5%;">Source</a>
+                <p> Lorem em ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra</p>
+                <a href="#" class="btn btn-primary bt-sm" style="margin-left:39%;margin-bottom:5%;">Source</a>
+                <p> Lorem em ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra</p>
+                <a href="#" class="btn btn-danger bt-sm" style="margin-left:39%;margin-bottom:5%;">Source</a>
             </div>
         </div>
 
