--- a/Praesidium/Praesidium/Views/trafficking/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Resources.cshtml
@@ -3,5 +3,32 @@
     ViewBag.Title = "Resources";
 }
 
-<h2>Resources</h2>
+<div class="panel panel-warning">
+    <h3 class="text-center panel-heading">Resources</h3>
+    <div class="h4 panel-body">
+        <div class="btn-group">
+            <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               Sort <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu"> 
+                <li class="btn">By Title</li>
+                <li class="btn">By Author</li>
+                <li class="btn">Recently Published</li>
+                <li class="btn">Recently Added</li>
+            </ul>
+        </div>
+        <table class="table">
+            <tbody>
+                <tr class="text-center">
+                    <td>Title</td>
+                    <td>Author(s)</td> 
+                    <td>Date Published</td>
+                    <td>Date Added</td>
+                    <td>Download</td>
+                </tr>
+            </tbody>
 
+        </table>
+
+    </div>
+</div>
