--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -115,14 +115,14 @@ footer {
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1020;
+    z-index: 20;
 }
 
 .searchArea {
     z-index: 1400;
-    background-color: #e95420;
+    background-color: #e95420 !important;
     width: 10%;
-    height: 30px;
+    height: 30px !important;
     position: fixed;
     top: 110px;
     right: 7.5%;
