Layout of Trafficking stats page New layout for trafficking resources

--- a/Praesidium/Praesidium/Views/trafficking/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Resources.cshtml
@@ -2,33 +2,115 @@
 @{
     ViewBag.Title = "Resources";
 }
-
+<!-- Creates Panel for Entire Page -->
 <div class="panel panel-warning">
-    <h3 class="text-center panel-heading">Resources</h3>
-    <div class="h4 panel-body">
-        <div class="btn-group">
-            <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Sort <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu"> 
-                <li class="btn">By Title</li>
-                <li class="btn">By Author</li>
-                <li class="btn">Recently Published</li>
-                <li class="btn">Recently Added</li>
-            </ul>
+    <h2 class="text-center panel-heading">Resources</h2>
+    
+    <div class="panel-body">
+        <!-- First Row of Resources -->
+        <div class="row" style="margin-bottom:50px">
+
+            <!-- First Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Third Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Fourth Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <table class="table">
-            <tbody>
-                <tr class="text-center">
-                    <td>Title</td>
-                    <td>Author(s)</td> 
-                    <td>Date Published</td>
-                    <td>Date Added</td>
-                    <td>Download</td>
-                </tr>
-            </tbody>
 
-        </table>
+        <!-- Second Row of Resources -->
+        <div class="row">
 
+            <!-- First Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Third Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Fourth Resource -->
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="~/Content/Images/ferris-state-university_2013-09-05_13-58-58.622.jpg" alt="Thumbnail_img">
+                    <div class="caption text-center">
+                        <h4>Title of Resource</h4>
+                        <h4>Author of Resource</h4>
+                        <h4>Date Added</h4>
+                        <p><a href="" class="btn btn-danger" role="button">Check It Out</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
