--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -405,12 +405,12 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 /* container CSS*/
 
 #borders{
-border: 2px solid #5c8a8a ;
+border: 2px solid #b3b3b3 ;
 box-shadow:1px 1px 4px rgba(0,0,0,0.5);
 border-radius: 10px;
 margin-top: 15px;
 margin-bottom: 15px;
-background-color:#75a3a3;
+background-color: #d9d9d9;
 color:white;
 }
 
