fix for borders

--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -410,7 +410,7 @@ box-shadow:1px 1px 4px rgba(0,0,0,0.5);
 border-radius: 10px;
 margin-top: 15px;
 margin-bottom: 15px;
-background-color: #d9d9d9;
+background-color:  #cccccc;
 color:white;
 }
 
