--- a/Praesidium/Praesidium/Views/Home/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Index.cshtml
@@ -57,8 +57,8 @@
 </div> <!-- Carousel -->
 
 <div class="row">
-    <div class="col-md-4">
-        <h2 style="text-align: center;">Top Resources</h2>
+    <div class="col-md-12" id="borders">
+        <h2 style="text-align: center;" >Top Resources</h2>
         <div style="border-top: 1px solid black; border-bottom: 1px solid black">
             <h4>What is Human trafficking</h4>
             <p>Views: 1027 &nbsp; Date Uploaded: 10/27/2016</p>
@@ -68,15 +68,18 @@
             </p>
         </div>
     </div>
-    <div class="col-md-4">
-        <h2 style="text-align: center;">News</h2>
+</div>
+
+<div class="row"  id="borders">
+    <div class="col-md-6" >
+        <h2 style="text-align: center;" >News</h2>
         <p>
             test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news -
             test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - test for news - 
         </p>        
     </div>
-    <div class="col-md-4">
-        <h2 style="text-align: center;">Recently Added</h2>
+    <div class="col-md-6" >
+        <h2 style="text-align: center;" >Recently Added</h2>
         <p>
             test for recently added - test for recently added - test for recently added - test for recently added - test for recently added - 
             test for recently added - test for recently added - test for recently added - test for recently added - test for recently added - 
