--- a/Praesidium/Praesidium/Views/Home/Contact.cshtml
+++ b/Praesidium/Praesidium/Views/Home/Contact.cshtml
@@ -32,7 +32,7 @@
 
   
 
-    <div class="col-lg-6" id="borders" style="text-shadow: grey 0.1em 0.1em 0.2em;">
+    <div class="col-lg-6" id="borders" style="text-shadow: grey 0.1em 0.1em 0.2em;padding:10px;">
         <form role="form">
             <h2 style="text-align:center;">Report Something</h2>
 
