--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -410,9 +410,9 @@ box-shadow:1px 1px 4px rgba(0,0,0,0.5);
 border-radius: 10px;
 margin-top: 15px;
 margin-bottom: 15px;
-background-color:  #cccccc;
+background-color: #595959;
 color:white;
-text-shadow: black 0.1em 0.1em 0.2em;
+text-shadow: grey 0.1em 0.1em 0.2em;
 }
 
 
