CS-Resources page update

--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -16,7 +16,15 @@
 
     </div>
 
-</div>
+    <div class="col-md-4 align-center ">
+        <p class="h3" style="text-align:center;color:slategray;padding-top:25%;"><strong>Most Viewed Links</strong></p>
+        <ul class="align-left">
+            <li><A HREF="http://praesidium.azurewebsites.net">Website1</A></li>
+            <li><A HREF="http://praesidium.azurewebsites.net">Website2</A></li>
+            <li><A HREF="http://praesidium.azurewebsites.net">Website3</A></li>
+        </ul>
+
+    </div>
 </br>
 
 <div class="col-md-8">
