changes to law enforcement and resources

--- a/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
@@ -4,6 +4,8 @@
 }
 
 <div class="row">
+    <img src="~/Content/Images/cyber-crime.jpg" style="width: 80%;" class="img-responsive" />
+    </br>
     <div class="col-md-10">
 
         <p class="h2" style="text-align:center; color:slategray"><strong>Law Enforcement's Role in Cyber Security</strong></p><br /><br />
@@ -19,7 +21,7 @@
 </div>
 </br>
 
-<div class="col-md-10">
+<div class="col-md-10 well">
     <p class="h2" style="text-align:center; color:slategray"><strong>Resources for Cyber Security Laws and Legislation</strong></p><br />
     <div class="col-md-10 centered">
         <ul>
